--- a/_gatsby/slices/_gatsby-scripts-1.html
+++ b/_gatsby/slices/_gatsby-scripts-1.html
@@ -2,6 +2,6 @@
           <script
             id="gatsby-chunk-mapping"
           >
-            window.___chunkMapping="{\"app\":[\"/app-2f1ea005342908249704.js\"],\"component---src-pages-index-js\":[\"/component---src-pages-index-js-4f419f6ab0a237ca4b9b.js\"]}";
+            window.___chunkMapping="{\"app\":[\"/app-bb06cd522045ac23252b.js\"],\"component---src-pages-404-js\":[\"/component---src-pages-404-js-da63418fc16a1ec439ed.js\"],\"component---src-pages-index-js\":[\"/component---src-pages-index-js-32d81bf90b8694cea0de.js\"],\"component---src-templates-post-js\":[\"/component---src-templates-post-js-b950eab969704b0ae582.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="b19199602dcf0d89eeba";</script><script src="/web-gatsby/webpack-runtime-7210c47453c899b6fc02.js" async></script><script src="/web-gatsby/framework-d41aeb5f23a25feaf897.js" async></script><script src="/web-gatsby/app-2f1ea005342908249704.js" async></script>
+        <script>window.___webpackCompilationHash="9e446f5417dc4b914f8f";</script><script src="/web-gatsby/webpack-runtime-c0f7c2eb6b05817d38ea.js" async></script><script src="/web-gatsby/framework-00f58b69fdf046ad3801.js" async></script><script src="/web-gatsby/app-bb06cd522045ac23252b.js" async></script>
